--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <jackson.version>2.14.1</jackson.version>
         <jsr303.version>2.0.6</jsr303.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
+        <commons-codec.version>1.15</commons-codec.version>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
     </properties>
@@ -183,5 +184,13 @@
             <artifactId>validation-api</artifactId>
             <version>${validation-api.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
